# order_shop

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
config/: settings.py  urls.py
order_and_shop/: admin.py  apps.py  models.py  serializers.py  signals.py  tools.py  urls.py  views.py
order_and_shop/migrations/: 0001_initial.py
tests/: test_status.py
