[tool.poetry]
name = "ordershop"
version = "0.1.0"
description = ""
authors = ["NikGor <nicolas.gordienko@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
requests = "^2.32.3"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
djangorestframework = "^3.15.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
